Handles multiple topics

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,8 @@
                     }
                 }
 
+                //TODO add highlighting of the row, green/red/yellow based on status
+
             } else {
                 var lu = document.getElementById("lastUpdate");
                 var txt = JSON.parse(event.data);
