--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,6 @@
 <div id="lastUpdate">
     <p>Last server heartbeat received: </p>
 </div>
-<div id="logArea" style="visibility: visible"></div>
+<div id="logArea" style="visibility: hidden"></div>
 </body>
 </html>
